Improve Shockwave emulation fidelity
Expand Director/Lingo compatibility across VM value coercion, chunk expressions, member registry lookup, text member ranges, external cast hydration, sprite input, frame timing, palette-aware rendering, and WASM network/Multiuser handling.

Exclude movie-specific Habbo/Origins harness work and BobbaXtra from this commit so the change stays focused on generic Shockwave emulation.